compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_body_two_statements.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/body/two-statements.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported main body
   ╭─[tests/fixtures/diagnostics/body/two-statements.ml:2:11]
 1 │ fn main() {
 2 │   println("first");
   ·           ───┬───
   ·              ╰── stage0 currently allows local lets followed by one println expression
 3 │   println("second");
   ╰────
  help: try: fn main() { let name = "Alice"; println(name) }
